# Graph-Rag

./: .env_example  .gitignore  README.md  docker-compose.yml  examples.py  experiment.md  pyproject.toml  requirements.txt  run.py
app/: backend.py  document_processor.py  frontend.py  graph_rag.py  vector_store.py
app/dataset/: data_from_wiki.txt
experiments/: Collect_document.ipynb  collect_wiki.py  quality_assessment.py  quality_assessment_results.json  rag_comparison.py  simple_rag_multi_retrieve.ipynb  simple_rag_without_retrieve.ipynb  wiki_parser.ipynb
graph_rag_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
