[project]
name = "rag-system"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "fastapi",
  "uvicorn",
  "gradio",
  "requests",
  "python-dotenv",
  "openai",
  "scikit-learn",
  "numpy",
  "scipy",
  "pandas",
  "nltk",
  "spacy",
]

[project.scripts]
backend = "app.backend:main"
frontend = "app.frontend:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]