[project]
name = "graph-rag-system"
version = "2.0.0"
description = "Advanced RAG system with Knowledge Graph integration"
requires-python = ">=3.10"

dependencies = [
  "fastapi",
  "uvicorn",
  "gradio",
  "requests",
  "python-dotenv",
  "openai",
  "scikit-learn",
  "numpy",
  "scipy",
  "pandas",
  "nltk",
  "spacy",
  "networkx>=3.0",
  "matplotlib",
  "rank-bm25",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers",
]

[project.scripts]
backend = "app.backend:main"
frontend = "app.frontend:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
